--- a/map.html
+++ b/map.html
@@ -11,21 +11,21 @@
 		<script>
 			var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
 			mapOption = {
-				center: new kakao.maps.LatLng(37.623384, 127.082918), // 지도의 중심좌표
-				level: 3, // 지도의 확대 레벨
+				center: new kakao.maps.LatLng(37.617895, 127.076175), // 지도의 중심좌표
+				level: 6, // 지도의 확대 레벨
 				mapTypeId : kakao.maps.MapTypeId.ROADMAP // 지도종류
 			}; 
 
 			// 지도를 생성한다 
 			var map = new kakao.maps.Map(mapContainer, mapOption); 
-			
+
 			// 마커 클러스터러를 생성합니다 
 			var clusterer = new kakao.maps.MarkerClusterer({
-				map: map, // 마커들을 클러스터로 관리하고 표시할 지도 객체 
-				averageCenter: true, // 클러스터에 포함된 마커들의 평균 위치를 클러스터 마커 위치로 설정 
-				minLevel: 10 // 클러스터 할 최소 지도 레벨 
-			});
-		
+        		map: map, // 마커들을 클러스터로 관리하고 표시할 지도 객체 
+        		averageCenter: true, // 클러스터에 포함된 마커들의 평균 위치를 클러스터 마커 위치로 설정 
+        		minLevel: 10 // 클러스터 할 최소 지도 레벨 
+    		});
+
 			var 데이터 = [
 				[37.628010, 127.090197, '<div style="padding:5px;">서울여대</div>'],
 				[37.643445, 127.106370, '<div style="padding:5px;">삼육대</div>'],
@@ -34,12 +34,11 @@
 			];
 
 			var markers = [];
-
 			for(var i=0; i < 데이터.length; i++){
 				// 지도에 마커를 생성하고 표시한다
 				var marker = new kakao.maps.Marker({
 					position: new kakao.maps.LatLng(데이터[i][0], 데이터[i][1]), // 마커의 좌표
-					//map: map // 마커를 표시할 지도 객체
+					map: map // 마커를 표시할 지도 객체
 				});
 				
 				// 마커 위에 표시할 인포윈도우를 생성한다
@@ -47,12 +46,26 @@
 					content : 데이터[i][2] // 인포윈도우에 표시할 내용
 				});
 
-				// 인포윈도우를 지도에 표시한다
-				infowindow.open(map, marker);
-				markers.push(maker);
+				markers.push(marker);
+				kakao.maps.event.addListener(marker, 'mouseover', makeOverListener(map, marker, infowindow));
+    			kakao.maps.event.addListener(marker, 'mouseout', makeOutListener(infowindow));
 			}
 			// 클러스터러에 마커들을 추가합니다
 			clusterer.addMarkers(markers);
+
+			// 인포윈도우를 표시하는 클로저를 만드는 함수입니다 
+			function makeOverListener(map, marker, infowindow) {
+    			return function() {
+        			infowindow.open(map, marker);
+    			};
+			}
+
+			// 인포윈도우를 닫는 클로저를 만드는 함수입니다 
+			function makeOutListener(infowindow) {
+    			return function() {
+        			infowindow.close();
+    			};
+			}
 		</script>
 	</body>
 </html>
