--- a/HealthMap/WebContent/noticeManage.html
+++ b/HealthMap/WebContent/noticeManage.html
@@ -16,7 +16,7 @@
 	<div class="noticeList">
 		<table>
 			<tr>
-				<th onclick="notice()">제목: 중랑천 공사</th>
+				<th onclick="noticeDetailManage()">제목: 중랑천 공사</th>
 				<th>운영진</th>
 			</tr>
 		</table>
@@ -29,7 +29,7 @@
 		window.history.back();
 	}
 	
-	function notice() {
-		window.location.href = "notice.html";
+	function noticeDetailManage() {
+		window.location.href = "noticeDetailManage.html";
 	}
 </script>
