--- a/HealthMap/WebContent/favorite.html
+++ b/HealthMap/WebContent/favorite.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 	<div style="height:100vh;">
-		<nav class="navbar">즐겨찾기</nav>
+		<nav class="navbar navbar_items">
+			<button style="color: white;" onclick="back()"><i class="fas fa-chevron-left"></i></button>
+			<div>즐겨찾기</div>
+			<button></button>
+		</nav>
 		<div style="height:45%; border:1px solid #000;">
 			<div class="facility">
 				<button>시설이름</button>
@@ -20,9 +24,20 @@
 				<span>주소 서울시 노원구 노원로12</span>
 			</div>
 			<div>
-				<button class="facilitybtn">시설상세</button>
+				<button class="facilitybtn" onclick="gym()">시설상세</button>
 			</div>
 		</div>
 	</div>
 </body>
 </html>
+
+<script>
+	function back() {
+		window.history.back();
+	}
+	
+	function gym() {
+		window.location.href = "gym.html";
+	}
+
+</script>
