--- a/HealthMap/WebContent/machineDetailManage.html
+++ b/HealthMap/WebContent/machineDetailManage.html
@@ -10,8 +10,11 @@
 <body>
 	<nav class="navbar navbar_items">
 		<button style="color: white;" onclick="back()"><i class="fas fa-chevron-left"></i></button>
-		<div>공지사항</div>
-		<button></button>
+		<div>기구상세관리</div>
+		<div>
+			<button style="color:white;"><i class="fas fa-trash-alt"></i></button>
+			<button style="color:white; border:2px solid #fff; padding:0.1em;">수정</button>
+		</div>
 	</nav>
 	<div class="noticeList">
 		<table>
@@ -25,8 +28,10 @@
 </body>
 </html>
 
+<script src="js/jquery-3.6.0.min.js"></script>
+<script src="js/core.js"></script>
 <script>
-	function back() {
-		window.history.back();
-	}
+function back() {
+	window.history.back();
+}
 </script>
