--- a/HealthMap/WebContent/userManage.html
+++ b/HealthMap/WebContent/userManage.html
@@ -11,30 +11,26 @@
 	<div style="height:100vh;">
 		<nav class="navbar navbar_items">
 			<button style="color: white;" onclick="back()"><i class="fas fa-chevron-left"></i></button>
-			<div>시설상세</div>
+			<div>회원관리</div>
 			<button></button>
 		</nav>
-		<div style="height:30%; border:1px solid #000;">
-			<div class="facility">
-				<button>시설이름</button>
-				<button><i class="far fa-star"></i>즐겨찾기</button>
-			</div>
-			<div class="numberAndAddress">
-				<span>전화번호 12345678</span><br>
-				<span>주소 서울시 노원구 노원로12</span>
-			</div>
-		</div>
-		<ul class="machine">
-			<li><i class="fas fa-dumbbell"></i></li>
-			<li><span>기구이름</span></li>
-			<li><span>수량</span></li>
+		<ul class="machine" onclick="userDetailManage()">
+			<li><span>이름</span></li>
+			<li><span>전화번호</span></li>
+			<li><i class="fas fa-trash-alt"></i></li>
 		</ul>	
 	</div>
 </body>
 </html>
 
+<script src="js/jquery-3.6.0.min.js"></script>
+<script src="js/core.js"></script>
 <script>
-	function back() {
-		window.history.back();
-	}
+function back() {
+	window.history.back();
+}
+
+function userDetailManage() {
+	window.location.href = "userDetailManage.html";
+}
 </script>
