--- a/HealthMap/WebContent/noticeManage.html
+++ b/HealthMap/WebContent/noticeManage.html
@@ -11,7 +11,7 @@
 	<nav class="navbar navbar_items">
 			<button style="color: white;" onclick="back()"><i class="fas fa-chevron-left"></i></button>
 			<div>공지사항</div>
-			<button></button>
+			<button><i class="fas fa-plus-square" style="color:white;"></i></button>
 		</nav>
 	<div class="noticeList">
 		<table>
