--- a/HealthMap/WebContent/favorite.html
+++ b/HealthMap/WebContent/favorite.html
@@ -14,7 +14,7 @@
 			<div>즐겨찾기</div>
 			<button></button>
 		</nav>
-		<div style="height:45%; border:1px solid #000;">
+		<div class="favBox">
 			<div class="facility">
 				<button>시설이름</button>
 				<button><i class="far fa-star"></i>즐겨찾기</button>
@@ -23,8 +23,9 @@
 				<span>전화번호 12345678</span><br>
 				<span>주소 서울시 노원구 노원로12</span>
 			</div>
-			<div>
-				<button class="facilitybtn" onclick="gym()">시설상세</button>
+			<div style="display:flex; justify-content:space-around;">
+				<button><i class="fas fa-trash-alt" style="font-size:1.5em;"></i></button>
+				<button style="border:1px solid #eee; padding:0.3em;" onclick="gym()">시설상세</button>
 			</div>
 		</div>
 	</div>
