--- a/HealthMap/WebContent/gymManage.html
+++ b/HealthMap/WebContent/gymManage.html
@@ -20,10 +20,10 @@
 				<i class="fas fa-trash-alt" style="font-size:1.5em;"></i>
 			</div>
 			<div class="numberAndAddress">
-				<span>전화번호 12345678</span>
+				<span>전화번호 12345678</span><br>
 				<span>주소 서울시 노원구 노원로12</span>
 			</div>
-			<button class="facilitybtn" onclick="gymDetailManage()">기구보기</button>			
+			<button class="facilitybtn" onclick="gymDetailManage()">시설상세</button>			
 		</div>
 	</div>
 </body>
