--- a/HealthMap/WebContent/map.html
+++ b/HealthMap/WebContent/map.html
@@ -3,135 +3,219 @@
 <head>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <meta charset="utf-8">
-<meta name=viewport content="width=device-width, initial-scale=1, user-scalable=0">
-<script src="https://kit.fontawesome.com/da8787eeee.js" crossorigin="anonymous"></script>
+<meta name=viewport
+   content="width=device-width, initial-scale=1, user-scalable=0">
+<script src="https://kit.fontawesome.com/da8787eeee.js"
+   crossorigin="anonymous"></script>
+
 <title>헬맵</title>
 </head>
 <body>
-	<nav class="navbar navbar_items">
-		<input type="checkbox" id="menuicon">
-		<label for="menuicon">
-			<span></span>
-			<span></span>
-			<span></span>
-		</label>
-		<div class="sidebar">
-			<button class="logoutbtn" onclick="logout()">로그아웃</button>
-			<div class="imgAndName">
-				<img class="myimg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQR7Tj5xwhs3JZx_DmdyfL_wm_zJOIPLCI__Q&usqp=CAU">
-				<span class="myname">이름</span>
-			</div>
-			<div class="wrapper">
-				<button class="sbbtn" onclick="myInfo()">내정보</button>
-				<button class="sbbtn" onclick="favorite()">나의 즐겨찾기</button>
-				<button class="sbbtn" onclick="notice()">공지사항</button>
-			</div>
-		</div>
-		<div class="logo">헬맵</div>
-		<button></button>
-	</nav>
-	<div class="lowbar">
-		<div class="facility">
-			<button>시설이름</button>
-			<button><i class="far fa-star"></i>즐겨찾기</button>
-		</div>
-		<div class="numberAndAddress">
-			<span>전화번호 12345678</span><br>
-			<span>주소 서울시 노원구 노원로12</span>
-		</div>	
-		<button class="facilitybtn">시설상세</button>
-	</div>
-	<div id="map"></div>
-	
+   <div id="menuap"></div>
+   <nav class="navbar navbar_items">
+      <i class="fas fa-bars" onclick="menuSet()"></i>
+      <div class="logo">헬맵</div>
+      <div>
+         <button></button>
+      </div>
+   </nav>
+   <div id="map"></div>
+   <div id="lowDis"></div>
 </body>
 </html>
-
-<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=232fd098e3fd826728065d4e271b225f"></script>
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/core.js"></script>
+<script
+   src="//dapi.kakao.com/v2/maps/sdk.js?appkey=de8e60d936f40a074104efc048ff9c40"></script>
 <script>
-	var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
-	mapOption = {
-		center : new kakao.maps.LatLng(37.617895, 127.076175), // 지도의 중심좌표
-		level : 6, // 지도의 확대 레벨
-		mapTypeId : kakao.maps.MapTypeId.ROADMAP
-	// 지도종류
-	};
+var uno = null;
+var userobj = null;
+var gymList=[];
+var 데이터 = [];
+$(document).ready(function(){
+   AJAX.call("jsp/map.jsp", null, function(data) {
+      gymList = JSON.parse(data.trim());
+      setData(gymList);
+   });
+});
 
-	// 지도를 생성한다 
-	var map = new kakao.maps.Map(mapContainer, mapOption);
+function setData(gymList){
+      for(var i =0; i < gymList.length; i++){
+        데이터[i] = new Array(3);
+        데이터[i][0] = gymList[i].x;
+        데이터[i][1] = gymList[i].y;
+        데이터[i][2] = gymList[i];
+        makeMarker(데이터[i]);
+      }
+}
 
-	var 데이터 = [
-			[ 37.628010, 127.090197, '<div style="padding:5px;">서울여대</div>' ],
-			[ 37.643445, 127.106370, '<div style="padding:5px;">삼육대</div>' ],
-			[ 37.619306, 127.059027, '<div style="padding:5px;">광운대</div>' ],
-			[ 37.631568, 127.077480, '<div style="padding:5px;">과기대</div>' ] ];
+var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+mapOption = {
+   center : new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+   level : 5
+// 지도의 확대 레벨 
+};
 
-	for (var i = 0; i < 데이터.length; i++) {
-		// 지도에 마커를 생성하고 표시한다
-		var marker = new kakao.maps.Marker({
-			position : new kakao.maps.LatLng(데이터[i][0], 데이터[i][1]), // 마커의 좌표
-			map : map
-		// 마커를 표시할 지도 객체
-		});
+var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
 
-		// 마커 위에 표시할 인포윈도우를 생성한다
-		var infowindow = new kakao.maps.InfoWindow({
-			content : 데이터[i][2]
-		// 인포윈도우에 표시할 내용
-		});
+function makeMarker(데이터){
+      // 지도에 마커를 생성하고 표시한다
+      var marker = new kakao.maps.Marker({
+         position : new kakao.maps.LatLng(데이터[0], 데이터[1]), // 마커의 좌표
+         map : map,
+         title : JSON.stringify(데이터[2])
+      // 마커를 표시할 지도 객체
+      });
+      kakao.maps.event.addListener(marker, 'click', function() {
+         var gymstr = marker.getTitle();
+         var gymobj = JSON.parse(gymstr);
+         showLowbar(gymobj);
+      });
+   
+}
 
-		kakao.maps.event.addListener(marker, 'mouseover', makeOverListener(map,
-				marker, infowindow));
-		kakao.maps.event.addListener(marker, 'mouseout',
-				makeOutListener(infowindow));
-	}
+   
+//HTML5의 geolocation으로 사용할 수 있는지 확인합니다 
+if (navigator.geolocation) {
+   // GeoLocation을 이용해서 접속 위치를 얻어옵니다
+   navigator.geolocation.getCurrentPosition(function(position) {
 
-	// 인포윈도우를 표시하는 클로저를 만드는 함수입니다 
-	function makeOverListener(map, marker, infowindow) {
-		return function() {
-			infowindow.open(map, marker);
-		};
-	}
+      var lat = position.coords.latitude; // 위도
+      var lon = position.coords.longitude; // 경도
+         
+      var locPosition = new kakao.maps.LatLng(lat, lon);// 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
+      // 인포윈도우에 표시될 내용입니다
+      // 마커와 인포윈도우를 표시합니다
+      currentMove(locPosition);
 
-	// 인포윈도우를 닫는 클로저를 만드는 함수입니다 
-	function makeOutListener(infowindow) {
-		return function() {
-			infowindow.close();
-		};
-	}
+   });
 
-	// 마커에 클릭 이벤트를 등록한다 (우클릭 : rightclick)
-	kakao.maps.event.addListener(marker, 'click', function() {
-		alert('마커를 클릭했습니다!');
-	});
-	
-	$(document).ready(function() {
-		Page.init(setup);
-	});
+} else { // HTML5의 GeoLocation을 사용할 수 없을때 마커 표시 위치와 인포윈도우 내용을 설정합니다
+   var locPosition = new kakao.maps.LatLng(33.450701, 126.570667);
+   currentMove(locPosition);
+}
 
-	var loginId = null;
-	function setup(uid) {
-		loginId = uid;
-		console.log(loginId);
-	}
-	
-	function myInfo() {
-		window.location.href = "user.html";
-	}
-	
-	function favorite() {
-		window.location.href = "favorite.html";
-	}
-	
-	function notice() {
-		window.location.href = "noticeList.html";
-	}
-	
-	function logout() {
-		AJAX.call("jsp/logout.jsp", null, function(data) {
-			alert("로그아웃을 완료하였습니다.");
-			window.location.href = "login.html";
-		});
-	}
-</script>
+function currentMove(locPosition) {
+   map.setCenter(locPosition);
+}
+
+
+// 로우바 버튼 
+function showLowbar(gym){
+   var str =  '';
+   str += '<div class="lowbarOver" onclick="closeLowbar()"></div>';
+   str += '<div class="lowbar">'
+   str += '<div class="facility">';
+   str += '<div>'+ gym.name+'</div> ';
+   if(isFavorite(gym.gno)){
+      str += '<button onclick="cancelFavorite('+ gym.gno +')">*<i class="far fa-star"></i>즐겨찾기</button>';
+   }else{
+      str += '<button onclick="addFavorite('+ gym.gno +')"><i class="far fa-star"></i>즐겨찾기</button>';
+   }
+   str += '</div>'; //facility
+   str += '<div class="numberAndAddress">';
+   str += '<span>전화번호 : '+ gym.tel +'</span><br><span>주소 : '+ gym.address +'</span>';
+   str += '</div>';
+   str += '<div> <button class="facilitybtn" onclick="showGymDetail()">시설상세</button></div> ';
+   str += '</div>'; //lowbar
+   console.log(gym);
+   $("#lowDis").html(str);
+}
+
+function closeLowbar(){
+   var str = "";
+   $("#lowDis").html(str);
+}
+function showGymDetail(){
+   window.location.href = "gym.html";
+}  
+function cancelFavorite(gno){
+   var uno = '<%=(String)session.getAttribute("uno")%>';
+   AJAX.call("jsp/favoriteDelete.jsp", {uno:uno,gno:gno}, function(data) {
+      var code = data.trim();
+          if(code == "ER"){
+             alert("즐겨찾기취소중 오류가 발생하였습니다.");
+          }else{
+             alert("즐겨찾기취소가 성공적으로 완료되었습니다..");
+             isFavorite(gno);
+          }
+   });
+}
+
+function addFavorite(gno){
+
+   uno = sessionStorage.getItem("uno");
+   
+    AJAX.call("jsp/favoriteAdd.jsp", {uno:uno,gno:gno}, function(data) {
+       var code = data.trim();
+       if(code == "ER"){
+          alert("즐겨찾기중 오류가 발생하였습니다.");
+       }else{
+          alert("즐겨찾기가 성공적으로 완료되었습니다..");
+          isFavorite(gno);
+       }
+    });
+}
+
+function isFavorite(gno){
+	uno = sessionStorage.getItem("uno");
+	AJAX.call("jsp/favoriteIs.jsp", {uno:uno,gno:gno}, function(data) {
+	   var code = data.trim();
+	   if(code == "NE") return false;
+	   else return true
+	 });
+}
+
+
+//메뉴
+function menuSet(){
+    Page.getUser(showSidebar);
+}
+
+
+function showSidebar(user){
+   var str = '';
+    str += '<div class = "sidebar">';
+    if(user.name == null){
+       str += '<button class="loginbtn" onclick = "showLogin()">로그인</button>';
+       str += '<div class="imgAndName">';
+        str += '<img class="myimg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQR7Tj5xwhs3JZx_DmdyfL_wm_zJOIPLCI__Q&usqp=CAU">';
+        str += '<div class="myname">이름</div>';
+    }else{
+       str += '<button class="loginbtn" onclick = "logout()">로그아웃</button>';
+       str += '<div class="imgAndName">';
+        str += '<img class="myimg" src="'+ user.img +'">';
+        str += '<div class="myname">'+ user.name +'</div>';
+    }
+    str += '</div>';
+    str += '<div class="wrapper">';
+    str += '<button class="sbbtn" onclick = "showUserDetail()">내정보</button>';
+    str += '<button class="sbbtn" onclick = "showFavorite()">나의 즐겨찾기</button>';
+    str += '<button class="sbbtn" onclick = "showNotice()">공지사항</button>';
+    str += '</div>';
+    str += '<div class = "sidebarRight" onclick="closeMenu()"></div>';
+    $("#menuap").html(str);
+}
+function logout(){
+   AJAX.call("jsp/logout.jsp", null, function(data) {
+      alert("로그아웃을 완료하였습니다.");
+      window.location.href = "map.html";
+   });
+}
+function closeMenu(){
+      var str =""
+      $("#menuap").html(str);
+   }
+   function showLogin(){
+      window.location.href = "login.html";
+   }
+   function showUserDetail() {
+      window.location.href = "user.html";   
+   }
+   function showFavorite(){
+      window.location.href = "favorite.html";
+   }
+   function showNotice(){
+      window.location.href = "noticeList.html";
+   }
+ </script>
