--- a/HealthMap/WebContent/userDetailManage.html
+++ b/HealthMap/WebContent/userDetailManage.html
@@ -12,31 +12,18 @@
 		<nav class="navbar navbar_items">
 			<button style="color: white;"><i class="fas fa-chevron-left" onclick="back()"></i></button>
 			<div>회원 관리 상세</div>
-			<button style="color: white;">수정</button>
+			<button style="color: white;"><i class="fas fa-trash-alt"></i></button>
 		</nav>
 		<div>
 			<div class="imgAndName">
 				<img class="myimg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQR7Tj5xwhs3JZx_DmdyfL_wm_zJOIPLCI__Q&usqp=CAU">
 				<span class="myname" style="top: 0;">이름</span>
-				<i class="fas fa-trash-alt" style="padding-left:3em; font-size:1.5em;"></i>
 			</div>
 			<div class="numberAndAddress">
 				<span>전화번호 010-1111-1111</span><br> 
 				<span>주소 서울특별시 종로구</span><br>
 				<span>생년월일 990103</span>
 			</div>
-			<button class="facilitybtn">즐겨찾기 더보기</button>
-		</div>
-		<div style="border-top: 1px solid #000; height:30%; bottom:0;">
-			<div class="facility">
-				<button>시설이름</button>
-				<button><i class="far fa-star"></i>즐겨찾기</button>
-			</div>
-			<div class="numberAndAddress">
-				<span>전화번호 12345678</span><br> 
-				<span>주소 서울시 노원구 노원로12</span>
-			</div>
-			<button class="facilitybtn">시설상세</button>
 		</div>
 	</div>
 </body>
