--- a/HealthMap/WebContent/machineManage.html
+++ b/HealthMap/WebContent/machineManage.html
@@ -14,11 +14,10 @@
 			<div>기구 관리</div>
 			<button><i class="fas fa-plus-square" style="color:white;" onclick="machineAdd()"></i></button>
 		</nav>
-		<ul class="machine">
-			<li><span>기구이름</span></li>
-			<li><span>수량</span></li>
-			<li><i class="fas fa-trash-alt"></i></li>
-		</ul>	
+		<div class="noticeItem">
+			<div class="align" style="flex:6; border-right:1px solid #0f0f0f;">기구이름</div>
+			<div class="align" style="flex:1;"><i class="fas fa-trash-alt""></i></div>
+		</div>
 	</div>
 </body>
 </html>
