--- a/HealthMap/WebContent/map.html
+++ b/HealthMap/WebContent/map.html
@@ -167,7 +167,7 @@ function isFavorite(gno){
 }
 
 
-//메뉴
+//사이드바
 function menuSet(){
     Page.getUser(showSidebar);
 }
@@ -205,17 +205,17 @@ function logout(){
 function closeMenu(){
       var str =""
       $("#menuap").html(str);
-   }
-   function showLogin(){
-      window.location.href = "login.html";
-   }
-   function showUserDetail() {
-      window.location.href = "user.html";   
-   }
-   function showFavorite(){
-      window.location.href = "favorite.html";
-   }
-   function showNotice(){
-      window.location.href = "noticeList.html";
-   }
+}
+function showLogin(){
+   window.location.href = "login.html";
+}
+function showUserDetail() {
+   window.location.href = "user.html";   
+}
+function showFavorite(){
+   window.location.href = "favorite.html";
+}
+function showNotice(){
+   window.location.href = "noticeList.html";
+}
  </script>
