--- a/HealthMap/WebContent/noticeDetailManage.html
+++ b/HealthMap/WebContent/noticeDetailManage.html
@@ -12,24 +12,51 @@
 		<button style="color: white;" onclick="back()"><i class="fas fa-chevron-left"></i></button>
 		<div>공지사항</div>
 		<div>
-			<button style="color:white;"><i class="fas fa-trash-alt"></i></button>
+			<button style="color:white;" onclick="noticedelete()"><i class="fas fa-trash-alt"></i></button>
 		</div>
 	</nav>
-	<div class="noticeList">
-		<table>
-			<tr>
-				<th>제목: 중랑천 공사</th>
-				<th>운영진</th>
-			</tr>
-		</table>
-		<div class="noticeContent">공지사항 내용</div>
-	</div>
+	<div id="notice"></div>
 </body>
 </html>
 
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/core.js"></script>
 <script>
+$(document).ready(function(){
+	var nno = sessionStorage.getItem("nno");
+   AJAX.call("jsp/noticeGet.jsp", {nno:nno}, function(data) {
+      var notice = JSON.parse(data.trim());
+      showNotice(notice);
+   });
+});
+
+function showNotice(notice){
+	var str = '';
+	str += '<div class="noticeList">';
+	str += '<table>';
+	str += '<tr>';
+	str += '<th >제목: ' + notice.title + '</th>';
+	str += '<th>운영진</th>';
+	str += '</tr>';
+	str += '</table>';
+	str += '<div class="noticeContent">' + notice.content +'</div>';
+	str += '</div>';
+	$("#notice").append(str);	
+}
+
+function noticedelete(nno) {
+	var nno = sessionStorage.getItem("nno");
+	AJAX.call("jsp/noticeDelete.jsp", {nno : nno}, function(data) {
+		var code = data.trim();
+		if(code == "ER"){
+		   alert("오류입니다.");
+		}else{
+		   alert("공지사항이 삭제되었습니다.");
+		   back();
+		}
+	});
+}
+
 function back() {
 	window.history.back();
 }
