--- a/HealthMap/WebContent/favorite.html
+++ b/HealthMap/WebContent/favorite.html
@@ -14,31 +14,67 @@
 			<div>즐겨찾기</div>
 			<button></button>
 		</nav>
-		<div class="favBox">
-			<div class="facility">
-				<button>시설이름</button>
-				<button><i class="far fa-star"></i>즐겨찾기</button>
-			</div>
-			<div class="numberAndAddress">
-				<span>전화번호 12345678</span><br>
-				<span>주소 서울시 노원구 노원로12</span>
-			</div>
-			<div style="display:flex; justify-content:space-around;">
-				<button><i class="fas fa-trash-alt" style="font-size:1.5em;"></i></button>
-				<button style="border:1px solid #eee; padding:0.3em;" onclick="gym()">시설상세</button>
-			</div>
+		<div class="favBox" id="fList">
 		</div>
 	</div>
 </body>
 </html>
-
+<script src="js/jquery-3.6.0.min.js"></script>
+<script src="js/core.js"></script>
 <script>
-	function back() {
-		window.history.back();
+$(document).ready(function(){
+	var uno = sessionStorage.getItem("uno");
+	if(uno==null){
+		alert("로그인이 필요한 서비스 입니다.");
+		window.location.href = "login.html";
+	}else{
+		AJAX.call("jsp/favoriteList.jsp", {uno : uno}, function(data) {
+			var fList = JSON.parse(data.trim());
+			var str = "";
+			for(var i=0; i < fList.length;i++){
+				str += showFavoriteList(fList[i]);
+			}
+			$("#fList").append(str);
+	    });
 	}
-	
-	function gym() {
-		window.location.href = "gym.html";
-	}
+});
+
+function showFavoriteList(gym){
+	   var str = ""
+	   str += '<div class="facility">';
+	   str += '<button>'+ gym.name +'</button>';
+	   str += '<button onclick="cancelFavorite('+ gym.gno +')"><i class="far fa-star" style="color:yellow;"></i>즐겨찾기</button>';
+	   str += '</div>'; //facility
+	   str += '<div class="numberAndAddress">';
+	   str += '<span>전화번호 '+ gym.tel +'</span><br>';
+	   str += '<span>주소 '+ gym.address +'</span>';
+	   str += '</div>'; //numberAndAddress
+	   str += '<div style="display:flex; justify-content:space-around; border-bottom:1px solid #000;">';
+	   str += '<button></button>';
+	   str += '<button style="border:1px solid #eee; padding:0.3em;" onclick="gym('+ gym.gno +')">시설상세</button>';
+	   str += '</div>';
+	   return str;
+}
+function cancelFavorite(gno){
+	var uno = sessionStorage.getItem("uno");
+	AJAX.call("jsp/favoriteDelete.jsp", {uno:uno,gno:gno}, function(data) {
+		var code = data.trim();
+	       if(code == "ER"){
+	    	   alert("즐겨찾기취소중 오류가 발생하였습니다.");
+	    	   location.reload();
+	       }else{
+	    	   alert("즐겨찾기취소가 성공적으로 완료되었습니다..");
+	    	   location.reload();
+	       }
+	});
+}
+function back() {
+	window.history.back();
+}
+
+function gym(gno) {
+	sessionStorage.setItem("gno",gno);
+	window.location.href = "gym.html";s
+}
 
 </script>
