--- a/HealthMap/WebContent/login.html
+++ b/HealthMap/WebContent/login.html
@@ -59,7 +59,11 @@ function login() {
 		else if (code == "PE") {
 			alert("패스워드가 일치하지 않습니다.");
 		}
+		else if (code == "AD") {
+			window.location.href = "mainA.html";
+		}
 		else {
+			sessionStorage.setItem("uno",code);
 			window.location.href = "map.html";
 		}
 	});
