--- a/HealthMap/WebContent/machineAdd.html
+++ b/HealthMap/WebContent/machineAdd.html
@@ -8,32 +8,53 @@
 <title>즐겨찾기</title>
 </head>
 <body>
-	<div id="all">
-		<nav class="navbar navbar_items">
-			<button style="color: white;" onclick="back()"><i class="fas fa-chevron-left"></i></button>
-			<div>기구추가</div>
-			<button></button>
-		</nav>
-		<div class="machine-options">
-			<input type="text" style="font-size:1.5em;" placeholder="기구 이름">
-			<div class="machine-count">
-				<span>수량 : </span>
-				<input type="text" size="2">
-			</div>
-		</div>
-		<button class="button-align">추가하기</button>
-	</div>
+   <div id="all">
+      <nav class="navbar navbar_items">
+         <button style="color: white;" onclick="back()"><i class="fas fa-chevron-left"></i></button>
+         <div>기구추가</div>
+         <button></button>
+      </nav>
+      <div class="machine-options">
+         <input type="text" style="font-size:1.5em;" placeholder="기구 이름" id ="machineName">
+         
+      </div>
+      <button class="button-align" onclick = addMachine()>추가하기</button>
+   </div>
 </body>
 </html>
+
 
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/core.js"></script>
 <script>
+
+
+function addMachine(){
+
+   var machineName = $("#machineName").val().trim();
+   var machineobj = {
+         name : machineName
+      };
+   
+   var params = {
+         jsonstr : JSON.stringify(machineobj)
+      };
+   
+      
+   var url = "jsp/machineAdd.jsp";
+   AJAX.call(url, params, function(data){
+   console.log(params);
+    var code = data.trim();
+    if(code == "ER"){
+       alert("오류입니다.");
+    }else{
+       alert("기구가 추가되었습니다.");
+       back();
+    }
+ });
+}
 function back() {
 	window.history.back();
 }
 
-function userDetailManage() {
-	window.location.href = "userDetailManage.html";
-}
 </script>
