--- a/HealthMap/WebContent/signup.html
+++ b/HealthMap/WebContent/signup.html
@@ -113,8 +113,9 @@ function signup() {
       else if (code == "ER") {
          alert("회원가입 처리중 에러가 발생하였습니다.");
       }
-      else {
-         window.location.href = "map.html";
+      else { 
+    	 alert("회원가입이 성공적으로 완료되었습니다.");
+         window.location.href = "login.html";
       }
    },true);
 }
