--- a/HealthMap/WebContent/updateUser.html
+++ b/HealthMap/WebContent/updateUser.html
@@ -42,7 +42,7 @@ input[type=file] {
 			<input id="ps" type="password" class="mtop-10" placeholder="패스워드">
 			<input id="ps2" type="password" class="mtop-10" placeholder="패스워드 확인">
 			<input id="name" type="text" class="mtop-10" placeholder="이름">
-			<input id="phoneNumber" type="text" class="mtop-10" placeholder="전화번호">
+			<input id="tel" type="text" class="mtop-10" placeholder="전화번호">
 			<input id="address" type="text" class="mtop-10" placeholder="주소">
 			<input id="birth" type="text" class="mtop-10" placeholder="생년월일(앞자리)">
 			<div class="section pad-4 mtop-30">
@@ -58,51 +58,87 @@ input[type=file] {
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/core.js"></script>
 <script>
+var user =null;
 $(document).ready(function() {
-	Page.init(setup);
+	var uno = sessionStorage.getItem("uno");
+	if(uno==null){
+		alert("로그인이 필요한 서비스 입니다.");
+		window.location.href = "login.html";
+	}else{
+		AJAX.call("jsp/userGet.jsp", {uno : uno}, function(data) {
+			var userstr = data.trim();
+			user = JSON.parse(userstr);
+			setPage(user);
+	    });
+	}
 });
-
-var userObj = null;
-function setup(uid) {
-	var params = {id: uid};
-	AJAX.call("jsp/userGet.jsp", params, function(data) {
-		userObj = JSON.parse(data.trim());
-		setPage(userObj);
-	});
-}
 
 function setPage(uobj) {
 	if (uobj == null) return;
 	$("#id").html(uobj.id);
 	$("#name").val(uobj.name);
-	$("#desc").val(uobj.desc);
+	$("#tel").val(uobj.tel);
+	$("#address").val(uobj.address);
+	$("#birth").val(uobj.birth);
 }
 
 function update() {
+	var ps = $("#ps").val().trim();
+	
+	if (ps != ""){
+		var ps2 = $("#ps2").val().trim();
+		if (ps2 == ps) {
+			alert("비밀번호확인을 다시입력해 주세요.");
+			$("#ps2").focus();
+			return;
+		}
+	}
 	var name = $("#name").val().trim();
 	if (name == "") {
 		alert("이름을 입력해 주세요.");
 		$("#name").focus();
 		return;
 	}
-	var desc = $("#desc").val().trim();
+	var tel = $("#tel").val().trim();
+	if (tel == "") {
+		alert("전화번호를 입력해 주세요.");
+		$("#tel").focus();
+		return;
+	}
+	var address = $("#address").val().trim();
+	if (address == "") {
+		alert("주소를 입력해 주세요.");
+		$("#address").focus();
+		return;
+	}
+	var birth = $("#birth").val().trim();
+	if (birth == "") {
+		alert("생년월일을 입력해 주세요.");
+		$("#birth").focus();
+		return;
+	}
+	
 	var imgobj = $("#image")[0].files[0];
 	
-	var jsonobj = userObj;
+	var jsonobj = user;
+	if (ps != "") jsonobj.password = ps;
 	if (name != "") jsonobj.name = name;
-	if (desc != "") jsonobj.desc = desc;
+	if (tel != "") jsonobj.tel = tel;
+	if (address != "") jsonobj.address = address;
+	if (birth != "") jsonobj.birth = birth;
 	if (imgobj != null) {
 		jsonobj.images = [imgobj.name];
 	}
 	jsonobj.ts = getTime();
-	
+	console.log(jsonobj);
 	var params = new FormData();
 	params.append("id", jsonobj.id);
+	params.append("uno", jsonobj.uno);
 	params.append("jsonstr", JSON.stringify(jsonobj));
 	if (imgobj != null) {
 		params.append("image", imgobj);
 	}
-	
+	console.log(params);
 	var url = "jsp/userUpdate.jsp";
 	AJAX.call(url, params, function(data) {
 		var code = data.trim();
@@ -121,7 +157,6 @@ function getTime() {
 	var year = date.getFullYear();
 	var month = ("0" + (1 + date.getMonth())).slice(-2);
 	var day = ("0" + date.getDate()).slice(-2);
-	
 	var hour = ("0" + date.getHours()).slice(-2);
 	var min = ("0" + date.getMinutes()).slice(-2);
 	var sec = ("0" + date.getSeconds()).slice(-2);
@@ -132,6 +167,7 @@ function getTime() {
 function logout() {
 	AJAX.call("jsp/logout.jsp", null, function(data) {
 		alert("로그아웃을 완료하였습니다.");
+		sessionStorage.removeItem("uno");
 		window.location.href = "login.html";
 	});
 }
