--- a/HealthMap/WebContent/withdraw.html
+++ b/HealthMap/WebContent/withdraw.html
@@ -23,7 +23,8 @@
 	</nav>
 	<div class="page-body">
 		<div class="section pad-24 mtop-30">
-			<input id="id" type="text" placeholder="아이디 (이메일주소)">
+			정말 탈퇴하시겠습니까?
+			
 			<input type="submit" class="mtop-20" value="회원탈퇴하기" onclick="withdraw()">
 		</div>
 	</div>
@@ -34,19 +35,14 @@
 <script src="js/core.js"></script>
 <script>
 function withdraw() {
-	var id = $("#id").val().trim();
-	if(id == "") {
-		alert("아이디를 입력해 주세요.");
-		$("#id").focus();
-		return;
-	}
-	
-	var url ="jsp/withdraw.jsp?id=" + id;
-	AJAX.call(url, null, function(data) {
+	var uno = sessionStorage.getItem("uno");
+	var url ="jsp/withdraw.jsp";
+	AJAX.call(url, {uno:uno}, function(data) {
 		var code = data.trim();
 		if(code == "OK") {
+			sessionStorage.removeItem("uno");
 			alert("회원 탈퇴가 완료되었습니다.");
-			window.location.href = "signup.html";
+			window.location.href = "map.html";
 		}
 		else if (code == "NA") {
 			alert("회원 정보를 찾을 수 없습니다.");
